Fix bad LoadSpinner placement on mobile

--- a/components/LoadSpinner/LoadSpinner.module.css
+++ b/components/LoadSpinner/LoadSpinner.module.css
@@ -1,6 +1,6 @@
 .overDiv {
   display: flex;
-  width: 20em;
+  width: auto;
   height: 8em;
   align-items: center;
   justify-content: center;
